@@ -5,9 +5,6 @@ extern int Billint; // Billentyuzet interraptos!
 
 extern int Sajatugras; // Ha 1, akkor left->pozitiv forgas
 
-// Ha nem igaz, csak memoriaba ir es nem flip-pel:
-extern int Waitforretrace; // Csak Windows-os w_v.cpp-ben allitodik
-
 void inkremental(void);
 extern long Inkremens;
 
